# FrameStorage

./: .gitignore  FrameStorage.sln
FrameStorage/: CMakeLists.txt  FrameStorage.cpp  FrameStorage.h  FrameStorage.vcxproj  FrameStorage.vcxproj.filters  README.md  main.cpp
FrameStorage/test_video/: generate_test_video.bat
